--- a/vertx/frontend/src/main/resources/webroot/partials/home.html
+++ b/vertx/frontend/src/main/resources/webroot/partials/home.html
@@ -16,12 +16,12 @@
     limitations under the License.
 -->
 <!-- This is a partial, and is templated by AngularJS -->
-<div>
+<div class="col-xs-6">
     <!-- Standard HTML form, with the submit function bound to the register() function defined in the the controller -->
     <form name="regForm" class="form-horizontal" ng-submit="register()">
-        <h2>Member Registration</h2>
+        <h2>Quote your order!</h2>
         <fieldset>
-            <legend>Register a member:</legend>
+            <legend>Get a quote:</legend>
             <!-- Each input is bound to a property on the prototype newMember object -->
             <div ng-class="{'form-group' : true, 'has-error' : regForm.name.$error.required, 'has-success' : !regForm.name.$error.required}">
                 <label for="name" class="col-sm-2 control-label">Name:</label>
@@ -29,6 +29,14 @@
                     <input type="text" name="name" id="name"  ng-model="newMember.name" class="form-control" placeholder="Your Name" required autofocus/>
                     <span class="error help-block" ng-show="regForm.name.$error.required">required</span>
                     <span class="error help-block" ng-show="errors.name">{{errors.name}}</span>
+                </div>
+            </div>
+            <div ng-class="{'form-group' : true, 'has-error' : regForm.surname.$error.required, 'has-success' : !regForm.surname.$error.required}">
+                <label for="surname" class="col-sm-2 control-label">Surname:</label>
+                <div class="col-sm-10">
+                    <input type="text" name="surname" id="surname"  ng-model="newMember.surname" class="form-control" placeholder="Your Surname" required autofocus/>
+                    <span class="error help-block" ng-show="regForm.surname.$error.required">required</span>
+                    <span class="error help-block" ng-show="errors.name">{{errors.surname}}</span>
                 </div>
             </div>
             <div ng-class="{'form-group' : true, 'has-error' : (regForm.email.$error.required || regForm.email.$error.email), 'has-success' : (!regForm.email.$error.required && !regForm.email.$error.email)}">
@@ -40,15 +48,16 @@
                     <span class="error help-block" ng-show="errors.email">{{errors.email}}</span>
                 </div>
             </div>
-            <div ng-class="{'form-group' : true, 'has-error' : (regForm.phoneNumber.$error.required || regForm.phoneNumber.$error.pattern), 'has-success' : (!regForm.phoneNumber.$error.required && !regForm.phoneNumber.$error.pattern)}">
-                <label for="phoneNumber" class="col-sm-2 control-label">Phone #:</label>
+            <div ng-class="{'form-group' : true, 'has-error' : (regForm.quantity.$error.required || regForm.quantity.$error.pattern), 'has-success' : (!regForm.quantity.$error.required && !regForm.quantity.$error.pattern)}">
+                <label for="quantity" class="col-sm-2 control-label">Quantity:</label>
                 <div class="col-sm-10">
-                    <input type="tel" name="phoneNumber" id="phoneNumber" ng-model="newMember.phoneNumber" ng-pattern="/^[0-9]{10,12}$/" class="form-control" placeholder="Your Phone #" required />
-                    <span class="error help-block" ng-show="regForm.phoneNumber.$error.required">required</span>
-                    <span class="error help-block" ng-show="regForm.phoneNumber.$error.pattern">must be between 10 and 12 digits</span>
-                    <span class="error help-block" ng-show="errors.phoneNumber">{{errors.phoneNumber}}</span>
+                    <input type="number" name="quantity" id="quantity"  ng-model="newMember.quantity" ng-pattern="/^[0-9]{1,6}$/" class="form-control" placeholder="How many Items" required autofocus/>
+                    <span class="error help-block" ng-show="regForm.quantity.$error.required">required</span>
+                    <span class="error help-block" ng-show="regForm.quantity.$error.pattern">Must be a number between 1 and 100000</span>
+                    <span class="error help-block" ng-show="errors.quantity">{{errors.quantity}}</span>
                 </div>
             </div>
+
             
             <!-- We output a list of success messages (appropriately styled!) for the form. -->
             <div ng-hide="!successMessages" ng-repeat="message in successMessages" class="alert alert-success fadein fadeout" >
@@ -70,39 +79,14 @@
             </div>
         </fieldset>
     </form>
-
-    <!-- A list of registered members -->
-    <h2>Members</h2>
-    <!-- If there are no members registered, instead of showing the table, we show a simple message. -->
-    <em ng-show="members.length == 0">No registered members.</em>
-    <div class="table-responsive">
-        <table ng-hide="members.length == 0" class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone #</th>
-                    <th>REST URL</th>
-                </tr>
-            </thead>
-            <!-- The table is built using the AngularJS repeat function, iterating over the members variable, and ordering by the property specified in the orderBy variable -->
-            <tr ng-repeat="member in members | orderBy:orderBy">
-                <td>{{member.id}}</td>
-                <td>{{member.name}}</td>
-                <td>{{member.email}}</td>
-                <td>{{member.phone_number}}</td>
-                <td><a href="http://localhost:8888/rest/members/{{member.id}}">/rest/members/{{member.id}}</a></td>
-                <td><input type="button" ng-click="delete()" name="remove" id="remove"  class="btn btn-danger" value="Delete"/></td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        REST URL for all members: <a href="http://localhost:8888/rest/members">/rest/members</a>
-    </div>
     <div>
         <!-- The table has a button to manually refresh the values, in case, for example, someone else adds a member -->
         <input type="button" ng-click="refresh()" name="refresh"
             id="refresh" value="Refresh" class="btn btn-default" />
     </div>
+
+</div>
+<div class="col-xs-6">
+    <h1>Today Special Offers:</h1>
+
 </div>
