--- a/vertx/frontend/src/main/resources/webroot/partials/home.html
+++ b/vertx/frontend/src/main/resources/webroot/partials/home.html
@@ -16,27 +16,27 @@
     limitations under the License.
 -->
 <!-- This is a partial, and is templated by AngularJS -->
-<div class="col-xs-6">
+<div class="col-xs-6" xmlns="http://www.w3.org/1999/html">
     <!-- Standard HTML form, with the submit function bound to the register() function defined in the the controller -->
     <form name="regForm" class="form-horizontal" ng-submit="register()">
         <h2>Quote your order!</h2>
         <fieldset>
             <legend>Get a quote:</legend>
             <!-- Each input is bound to a property on the prototype newMember object -->
-            <div ng-class="{'form-group' : true, 'has-error' : regForm.name.$error.required, 'has-success' : !regForm.name.$error.required}">
-                <label for="name" class="col-sm-2 control-label">Name:</label>
+            <div ng-class="{'form-group' : true, 'has-error' : regForm.firstname.$error.required, 'has-success' : !regForm.firstname.$error.required}">
+                <label for="firstname" class="col-sm-2 control-label">First Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" name="name" id="name"  ng-model="newMember.name" class="form-control" placeholder="Your Name" required autofocus/>
-                    <span class="error help-block" ng-show="regForm.name.$error.required">required</span>
-                    <span class="error help-block" ng-show="errors.name">{{errors.name}}</span>
+                    <input type="text" name="firstname" id="firstname"  ng-model="newMember.firstname" class="form-control" placeholder="Your Name" required autofocus/>
+                    <span class="error help-block" ng-show="regForm.firstname.$error.required">required</span>
+                    <span class="error help-block" ng-show="errors.firstname">{{errors.name}}</span>
                 </div>
             </div>
-            <div ng-class="{'form-group' : true, 'has-error' : regForm.surname.$error.required, 'has-success' : !regForm.surname.$error.required}">
-                <label for="surname" class="col-sm-2 control-label">Surname:</label>
+            <div ng-class="{'form-group' : true, 'has-error' : regForm.lastname.$error.required, 'has-success' : !regForm.lastname.$error.required}">
+                <label for="lastname" class="col-sm-2 control-label">Last Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" name="surname" id="surname"  ng-model="newMember.surname" class="form-control" placeholder="Your Surname" required autofocus/>
-                    <span class="error help-block" ng-show="regForm.surname.$error.required">required</span>
-                    <span class="error help-block" ng-show="errors.name">{{errors.surname}}</span>
+                    <input type="text" name="lastname" id="lastname"  ng-model="newMember.lastname" class="form-control" placeholder="Your Last Name" required autofocus/>
+                    <span class="error help-block" ng-show="regForm.lastname.$error.required">required</span>
+                    <span class="error help-block" ng-show="errors.lastname">{{errors.surname}}</span>
                 </div>
             </div>
             <div ng-class="{'form-group' : true, 'has-error' : (regForm.email.$error.required || regForm.email.$error.email), 'has-success' : (!regForm.email.$error.required && !regForm.email.$error.email)}">
@@ -46,6 +46,18 @@
                     <span class="error help-block" ng-show="regForm.email.$error.required">required</span>
                     <span class="error help-block" ng-show="regForm.email.$error.email">not a valid email</span>
                     <span class="error help-block" ng-show="errors.email">{{errors.email}}</span>
+                </div>
+            </div>
+            <div ng-class="{'form-group' : true, 'has-error' : regForm.product.$error.required, 'has-success' : !regForm.product.$error.required}">
+                <label for="product" class="col-sm-2 control-label">Product:</label>
+                <div class="col-sm-10">
+                    <select name="product" id="product"  ng-model="newMember.product" class="form-control" placeholder="Select Product" required autofocus>
+                        <option ng-repeat="product in products" value="{{product.id}}">
+                            {{product.description}}
+                        </option>
+                    </select>
+                    <span class="error help-block" ng-show="regForm.product.$error.required">required</span>
+                    <span class="error help-block" ng-show="errors.product">{{errors.required}}</span>
                 </div>
             </div>
             <div ng-class="{'form-group' : true, 'has-error' : (regForm.quantity.$error.required || regForm.quantity.$error.pattern), 'has-success' : (!regForm.quantity.$error.required && !regForm.quantity.$error.pattern)}">
@@ -73,7 +85,7 @@
             <!-- There are two buttons, the default submit action (which is bound for the whole form), and a reset button, that clears the form. -->
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" ng-disabled="regForm.$invalid" id="register" value="Register" class="btn btn-primary" />
+                    <input type="submit" ng-disabled="regForm.$invalid" id="register" value="Quote" class="btn btn-primary" />
                     <input type="button" ng-click="reset()" name="cancel" id="cancel" value="Cancel" class="btn btn-default" />
                 </div>
             </div>
