--- a/vertx/frontend/src/main/resources/webroot/partials/lead.html
+++ b/vertx/frontend/src/main/resources/webroot/partials/lead.html
@@ -20,7 +20,7 @@
              <td>{{member.lastname}}</td>
              <td>{{member.mail}}</td>
              <td><a href="http://localhost:8081/api/users/{{member.id}}">/api/users/{{member.id}}</a></td>
-             <td><input type="button" ng-click="delete()" name="remove" id="remove"  class="btn btn-danger" value="Delete"/></td>
+             <td><input type="button" ng-click="deleteUsers()" name="remove" id="remove"  class="btn btn-danger" value="Delete"/></td>
          </tr>
      </table>
  </div>
