this is the frontEND

--- a/vertx/frontend/src/main/resources/webroot/css/screen.css
+++ b/vertx/frontend/src/main/resources/webroot/css/screen.css
@@ -209,6 +209,13 @@ hr {
     margin-right: auto;
 }
 
+.centerall {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .fadein,
 .fadeout {
     -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
