--- a/vertx/frontend/src/main/resources/webroot/partials/ship.html
+++ b/vertx/frontend/src/main/resources/webroot/partials/ship.html
@@ -1,6 +1,6 @@
 <div class="col-xs-6 sbasespoc" xmlns="http://www.w3.org/1999/html">
     <!-- Standard HTML form, with the submit function bound to the register() function defined in the the controller -->
-    <form name="regForm" class="form-horizontal coolquote" ng-submit="register()">
+    <form name="regForm" class="form-horizontal coolquote" ng-submit="checkShipping()">
         <h2>Shpping Details:</h2>
         <fieldset>
             <!-- Each input is bound to a property on the prototype newMember object -->
@@ -36,6 +36,18 @@
                     <span class="error help-block" ng-show="errors.zipcode">{{errors.name}}</span>
                 </div>
             </div>
+            <div ng-class="{'form-group' : true, 'has-error' : regForm.country.$error.required, 'has-success' : !regForm.country.$error.required}">
+                <label for="country" class="col-sm-2 control-label">Product:</label>
+                <div class="col-sm-10">
+                    <select name="country" id="country"  ng-model="shippingInfo.country" class="form-control" placeholder="Select Country" required autofocus>
+                        <option ng-repeat="country in countries" value="{{country.value}}">
+                            {{country.value}}
+                        </option>
+                    </select>
+                    <span class="error help-block" ng-show="regForm.country.$error.required">required</span>
+                    <span class="error help-block" ng-show="errors.country">{{errors.required}}</span>
+                </div>
+            </div>
             <!-- We output a list of success messages (appropriately styled!) for the form. -->
             <div ng-hide="!successMessages" ng-repeat="message in successMessages" class="alert alert-success fadein fadeout" >
                 {{message}}
@@ -50,7 +62,7 @@
             <!-- There are two buttons, the default submit action (which is bound for the whole form), and a reset button, that clears the form. -->
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" ng-disabled="regForm.$invalid" id="register" value="Check" class="btn btn-primary" />
+                    <input type="submit" ng-disabled="regForm.$invalid" id="chackShipping" value="Check" class="btn btn-primary" />
                     <input type="button" ng-click="reset()" name="cancel" id="cancel" value="Cancel" class="btn btn-default" />
                 </div>
             </div>
@@ -60,6 +72,9 @@
 <div class="col-xs-6 cooltitle sbasespoc" xmlns="http://www.w3.org/1999/html">
     <h2>Review Your Order</h2>
     <h3 class="custcolor">Product: {{shippingInfo.product}}</h3>
-    <h3 class="custcolor">Price: {{shippingInfo.price}}</h3>
-    <h3 class="custcolor">Shipping Price: {{shippingInfo.shippingPrice}}</h3>
+    <h3 class="custcolor">Price: {{shippingInfo.price}} EUR</h3>
+    <h3 class="custcolor">Shipping Price: {{shippingInfo.shippingPrice}} EUR</h3>
+</div>
+<div class="col-xs-6 sbasespoc" ng-show="orderEnable">
+    <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="order()">Order it!</button>
 </div>
